--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -61,8 +61,33 @@ jobs:
 
     # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
     # If this step fails, then you should remove it and run the build manually (see below)
-    - name: Autobuild
-      uses: github/codeql-action/autobuild@v1
+#     - name: Autobuild
+#       uses: github/codeql-action/autobuild@v1
+    - name: Setup Ninja
+      uses: seanmiddleditch/gha-setup-ninja@v3
+
+    - name: Install googletest
+      shell: bash
+      run: |
+        git clone https://github.com/google/googletest --depth 1
+        cd googletest
+        mkdir build && cd build
+        if [ '${{runner.os}}' == 'Windows' ]; then
+          echo "Yes, this is on Windows"
+          cmake .. -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_INSTALL_PREFIX='${{github.workspace}}'/googletest-install -Dgtest_force_shared_crt=ON -G "Visual Studio 16 2019" -A x64
+        else
+          echo "Ohh, this is not on Windows"
+          cmake .. -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_INSTALL_PREFIX='${{github.workspace}}'/googletest-install -G Ninja
+        fi
+        cmake --build . --config ${{env.BUILD_TYPE}} -j 2
+        cmake --install . --config ${{env.BUILD_TYPE}}
+    - name: CMake configure
+      run: |
+        mkdir build
+        cd build
+        cmake .. -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DGTEST_ROOT=${{github.workspace}}/googletest-install
+    - name: Build
+      run: cmake --build build --config ${{env.BUILD_TYPE}}
 
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 https://git.io/JvXDl
